# fastapilearning

./: README.md  main_fastapi.py  pyproject.toml
Pydantic_Tutorial/: pydantic_p3.py  pydantic_p4_field_Validator.py  pydantic_p5_model_validator.py  pydantic_p6_computed_fields.py  pydantic_p7_nested_models.py  pydantic_p8_serialization.py  readme_pydantic.md
Serving_MLModels_with_FastAPI/: frontend.py  main.py
