[project]
name = "fastapicourse"
version = "0.1.0"
description = "A Project illustrating some basics of FastAPI which streamlines the backend of any Dynamic application (CRUD)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic[email]>=2.12.5",
    "scikit-learn==1.6.1",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]
